# MAgent

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  train_arrange.py
data/pursuit_model/predator/: tfdqn_0.index
data/pursuit_model/prey/: tfdqn_0.data-00000-of-00001  tfdqn_0.index
doc/: Tutorial for Many Kinds of Agents.md  get_started.md  rewad.md
examples/: README.md  api_demo.py  interactive_arrange.py  interactive_battle.py  show_arrange.py  show_battle_game.py  train_against.py  train_align.py  train_arrange.py  train_battle.py  train_battle_add.py  train_battle_game.py  train_city.py  train_gather.py  train_multi.py  train_pursuit.py  train_single.py  train_tiger.py  train_trans.py
python/magent/: README.md  __init__.py  base.py  c_lib.py  discrete_snake.py  environment.py  gridworld.py  model.py  trans_city.py  utility.py
python/magent/builtin/: common.py
scripts/: plot.py  plot_heat.py  plot_log.py  plot_many.py  plot_reward.py  rename.py  search.py  test_1m.py  test_against.py  test_tiger.py  tournament.py
scripts/test/: search.py  test_1m.py  test_against.py  test_examples.py  test_fps.py  test_tiger.py
src/: Environment.h  runtime_api.cc  runtime_api.h  temp_c_booster.cc
src/discrete_snake/: DiscreteSnake.cc  DiscreteSnake.h  Map.cc  Map.h  RenderGenerator.cc  RenderGenerator.h  snake_def.h
src/gridworld/: AgentType.cc  AgentType.h  GridWorld.cc  GridWorld.h  Map.cc  Map.h  Range.h  RenderGenerator.cc  RenderGenerator.h  RewardEngine.cc  RewardEngine.h  grid_def.h  test.cc
src/trans_city/: Map.cc  Map.h  RenderGenerator.cc  RenderGenerator.h  TransCity.cc  TransCity.h  city_def.h
src/utility/: utility.cc  utility.h
tools/: test_time.py
(+53 files in other folders)
